correct test db login

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -65,7 +65,7 @@
 	resources.Email.send = false
 
 	;; DB in a live server
-	resources.db.params.dbname = "tpc2"
-	resources.db.params.username = "tpc"
+	resources.db.params.dbname = "panel2_test"
+	resources.db.params.username = "panel2_test"
 	resources.db.params.password = "p0OmlQ210Lmabt6gfh" 
 
