static search works

--- a/php/src/application/config/formRemindPassword.ini
+++ b/php/src/application/config/formRemindPassword.ini
@@ -22,4 +22,5 @@ elements.submit.type = "submit"
 elements.submit.options.label = "receive password by email"
 elements.submit.options.decorators.helper = "ViewHelper"
 elements.submit.options.disableLoadDefaultDecorators = true
+elements.submit.options.attribs.class = "btn"
 
