--- a/php/src/application/config/formSearch.ini
+++ b/php/src/application/config/formSearch.ini
@@ -5,13 +5,13 @@ disableLoadDefaultDecorators = true
 decorators.FormElements = "FormElements"
 decorators.Form = "Form"
 
-elements.text.type = "text"
-elements.text.options.attribs.size = 22
-elements.text.options.required = true
-elements.text.options.attribs.class = "srch"
-elements.text.options.options.filters.lower.filter = "StringToLower"
-elements.text.options.decorators.helper = "ViewHelper"
-elements.text.options.disableLoadDefaultDecorators = true
+elements.keyword.type = "text"
+elements.keyword.options.attribs.size = 22
+elements.keyword.options.required = true
+elements.keyword.options.attribs.class = "srch"
+elements.keyword.options.options.filters.lower.filter = "StringToLower"
+elements.keyword.options.decorators.helper = "ViewHelper"
+elements.keyword.options.disableLoadDefaultDecorators = true
 
 elements.search.type = "submit"
 elements.search.options.attribs.class = "btn"
