--- a/php/src/application/config/formSettings.ini
+++ b/php/src/application/config/formSettings.ini
@@ -32,4 +32,5 @@ elements.submit.type = "submit"
 elements.submit.options.label = "save changes"
 elements.submit.options.decorators.helper = "ViewHelper"
 elements.submit.options.disableLoadDefaultDecorators = true
+elements.submit.options.attribs.class = "btn"
 
