--- a/php/src/application/config/formRegisterAccount.ini
+++ b/php/src/application/config/formRegisterAccount.ini
@@ -12,24 +12,18 @@
 method="post"
 
 elements.email.type = "text"
-elements.email.options.label = "My email address"
+elements.email.options.label = "Email address:"
 elements.email.options.attribs.size = 40
 elements.email.options.required = true
 elements.email.filters.lower.filter = "StringToLower"
 elements.email.options.validators.email.validator = "EmailAddress"
 
 elements.password.type = "text"
-elements.password.options.label = "My password"
+elements.password.options.label = "Password:"
 elements.password.options.attribs.size = 23
 elements.password.options.required = true
 
-elements.nickname.type = "text"
-elements.nickname.options.label = "My nickname (other people will see me by this name)"
-elements.nickname.options.attribs.size = 18
-elements.nickname.options.required = true
-
 elements.submit.type = "submit"
 elements.submit.options.label = "create account"
-elements.submit.options.decorators.helper = "ViewHelper"
-elements.submit.options.disableLoadDefaultDecorators = true
+elements.submit.options.attribs.class = "btn"
 
