--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -1,71 +1,71 @@
 
 [global]
 
-	;; load FaZend library
-	resources.FaZend.name = "panel2"
+    ;; load FaZend library
+    resources.FaZend.name = "panel2"
 
-	;; load project classes
-	autoloaderNamespaces.Model = "Model_"
+    ;; load project classes
+    autoloaderNamespaces.Model = "Model_"
 
-	;; admins
-	resources.FaZend.admins.yegor256@yahoo_com = "hjlbyf09"
+    ;; admins
+    resources.FaZend.admins.yegor256@yahoo_com = "hjlbyf09"
 
-	;; google analytics account
-	resources.FaZend.GoogleAnalytics = "UA-1963507-3"
+    ;; google analytics account
+    resources.FaZend.GoogleAnalytics = "UA-1963507-3"
 
-	;; mysql connection
-	resources.db.adapter = "Mysqli"
-	resources.db.params.host = "localhost"
-	resources.db.isDefaultTableAdapter = true
+    ;; mysql connection
+    resources.db.adapter = "Mysqli"
+    resources.db.params.host = "localhost"
+    resources.db.isDefaultTableAdapter = true
 
-	; actual email config
-	resources.Email.send = true
-	resources.Email.manager.email = "cso@technoparkcorp.com"
-	resources.Email.manager.name = "CSO"
-	resources.Email.notifier.email = "panel@technoparkcorp.com"
-	resources.Email.notifier.name = "thePanel Notifier"
+    ; actual email config
+    resources.Email.send = true
+    resources.Email.manager.email = "cso@technoparkcorp.com"
+    resources.Email.manager.name = "CSO"
+    resources.Email.notifier.email = "panel@technoparkcorp.com"
+    resources.Email.notifier.name = "thePanel Notifier"
 
 [production : global]
 
-	;; php.ini settings
-	phpSettings.display_startup_errors = 0
-	phpSettings.display_errors = 0
-	phpSettings.error_log = APPLICATION_PATH "/../../log/php_errors.log"
-	phpSettings.max_execution_time = 0
+    ;; php.ini settings
+    phpSettings.display_startup_errors = 0
+    phpSettings.display_errors = 0
+    phpSettings.error_log = APPLICATION_PATH "/../../log/php_errors.log"
+    phpSettings.max_execution_time = 0
 
-	;; DB in a live server
-	resources.db.params.dbname = "tpc2"
-	resources.db.params.username = "tpc"
-	resources.db.params.password = "hf8jPlmskjh8Pkfj" 
+    ;; DB in a live server
+    resources.db.params.dbname = "tpc2"
+    resources.db.params.username = "tpc"
+    resources.db.params.password = "hf8jPlmskjh8Pkfj"
 
-	; show errors to the web page, if they happen
-	resources.FaZend.errors.email = "manager@caybo.ru"
+    ; show errors to the web page, if they happen
+    resources.FaZend.errors.email = "manager@caybo.ru"
 
 ; local installation and deployment platform installation
 [development : global]
 
-	resources.FaZend.htmlCompression = false
+    resources.FaZend.htmlCompression = false
 
-	;; DB in a development server
-	resources.db.params.dbname = "tpc2"
-	resources.db.params.username = "tpc"
-	resources.db.params.password = "p0OmlQ210Lmabt6gfh" 
+    ;; DB in a development server
+    resources.db.params.dbname = "panel2"
+    resources.db.params.username = "panel2"
+    resources.db.params.password = "p0OmlQ210Lmabt6gfh"
 
-	; show errors to the web page, if they happen
-	resources.FaZend.errors.display = true
+    ; show errors to the web page, if they happen
+    resources.FaZend.errors.display = true
 
-	;; don't send emails from development platform
-	resources.Email.send = false
+    ;; don't send emails from development platform
+    resources.Email.send = false
 
 
 ; testing environmet
 [testing : global]
 
-	;; don't send emails from development platform
-	resources.Email.send = false
+    ;; don't send emails from development platform
+    resources.Email.send = false
 
-	;; DB in a live server
-	resources.db.params.dbname = "panel2_test"
-	resources.db.params.username = "panel2_test"
-	resources.db.params.password = "p0OmlQ210Lmabt6gfh" 
+    ;; DB in a live server
+    resources.db.params.dbname = "panel2_test"
+    resources.db.params.username = "panel2_test"
+    resources.db.params.password = "p0OmlQ210Lmabt6gfh"
 
