--- a/php/src/application/config/routes.ini
+++ b/php/src/application/config/routes.ini
@@ -1,39 +1,36 @@
 [production]
 
-; static pages
-routes.static.type = "Zend_Controller_Router_Route_Regex"
-routes.static.route = "^([a-z]+(?:/(?:\w[\w\-]+))*).*"
-routes.static.reverse = "%s"
-routes.static.defaults.controller = "static"
-routes.static.defaults.action = "index"
-routes.static.defaults.page = "about"
-routes.static.map.1 = "page"
+    ; static pages
+    routes.static.type = "Zend_Controller_Router_Route_Regex"
+    routes.static.route = "^([a-z]+(?:/(?:\w[\w\-]+))*).*"
+    routes.static.reverse = "%s"
+    routes.static.defaults.controller = "static"
+    routes.static.defaults.action = "index"
+    routes.static.defaults.page = "about"
+    routes.static.map.1 = "page"
 
-; home page
-routes.home.route = ""
-routes.home.defaults.controller = "static"
-routes.home.defaults.action = "index"
-routes.home.defaults.page = "home"
+    ; home page
+    routes.home.route = ""
+    routes.home.defaults.controller = "static"
+    routes.home.defaults.action = "index"
+    routes.home.defaults.page = "home"
 
-; panel front page
-routes.panel.type = "Zend_Controller_Router_Route"
-routes.panel.route = "p"
-routes.panel.defaults.controller = "panel"
-routes.panel.defaults.action = "index"
+    ; panel front page
+    routes.panel.type = "Zend_Controller_Router_Route_Regex"
+    routes.panel.route = "p(?:/(.*))"
+    routes.panel.defaults.controller = "panel"
+    routes.panel.reverse = "p/%s"
+    routes.panel.defaults.action = "index"
+    routes.panel.defaults.doc = "root"
+    routes.panel.map.1 = "doc"
 
-; documents
-routes.doc.type = "Zend_Controller_Router_Route"
-routes.doc.route = "doc/:document/*"
-routes.doc.defaults.controller = "doc"
-routes.doc.defaults.action = "index"
-
-; dynamic TIKZ image loader
-routes.tikz.type = "Zend_Controller_Router_Route_Regex"
-routes.tikz.route = ".*\-tikz/([\w\d]+)"
-routes.tikz.reverse = "-tikz/%s"
-routes.tikz.defaults.controller = "tikz"
-routes.tikz.defaults.action = "index"
-routes.tikz.map.1 = "tikz"
+    ; dynamic TIKZ image loader
+    routes.tikz.type = "Zend_Controller_Router_Route_Regex"
+    routes.tikz.route = ".*\-tikz/([\w\d]+)"
+    routes.tikz.reverse = "-tikz/%s"
+    routes.tikz.defaults.controller = "tikz"
+    routes.tikz.defaults.action = "index"
+    routes.tikz.map.1 = "tikz"
 
 [development : production]
 
