--- a/php/src/application/config/routes.ini
+++ b/php/src/application/config/routes.ini
@@ -24,6 +24,11 @@
     routes.panel.defaults.doc = "root"
     routes.panel.map.1 = "doc"
 
+    ; panel specific functions
+    routes.pf.type = "Zend_Controller_Router_Route"
+    routes.pf.route = "pf/:action/*"
+    routes.pf.defaults.controller = "panel"
+
     ; dynamic TIKZ image loader
     routes.tikz.type = "Zend_Controller_Router_Route_Regex"
     routes.tikz.route = ".*\-tikz/([\w\d]+)"
