correct login using fazend

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -6,6 +6,9 @@
 
     ;; load project classes
     autoloaderNamespaces.Model = "Model_"
+    autoloaderNamespaces.Shared = "Shared_"
+
+    resources.session.name = "panel2"
 
     ;; admins
     resources.FaZend.admins.yegor256@yahoo_com = "hjlbyf09"
