simple form works

--- a/php/src/application/config/formSearch.ini
+++ b/php/src/application/config/formSearch.ini
@@ -1,22 +1,22 @@
 [form]
 
-method = "post"
-disableLoadDefaultDecorators = true
-decorators.FormElements = "FormElements"
-decorators.Form = "Form"
+    method = "post"
+    disableLoadDefaultDecorators = true
+    decorators.FormElements = "FormElements"
+    decorators.Form = "Form"
 
-elements.keyword.type = "text"
-elements.keyword.options.attribs.size = 22
-elements.keyword.options.required = true
-elements.keyword.options.attribs.class = "srch"
-elements.keyword.options.options.filters.lower.filter = "StringToLower"
-elements.keyword.options.decorators.helper = "ViewHelper"
-elements.keyword.options.disableLoadDefaultDecorators = true
+    elements.keyword.type = "text"
+    elements.keyword.options.attribs.size = 22
+    elements.keyword.options.required = true
+    elements.keyword.options.attribs.class = "srch"
+    elements.keyword.options.filters.lower.filter = "StringToLower"
+    elements.keyword.options.decorators.helper = "ViewHelper"
+    elements.keyword.options.disableLoadDefaultDecorators = true
 
-elements.search.type = "submit"
-elements.search.options.attribs.class = "btn"
-elements.search.options.attribs.title = "Search site content"
-elements.search.options.label = NULL
-elements.search.options.decorators.helper = "ViewHelper"
-elements.search.options.disableLoadDefaultDecorators = true
+    elements.search.type = "submit"
+    elements.search.options.attribs.class = "btn"
+    elements.search.options.attribs.title = "Search site content"
+    elements.search.options.label = NULL
+    elements.search.options.decorators.helper = "ViewHelper"
+    elements.search.options.disableLoadDefaultDecorators = true
 
