--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -8,6 +8,7 @@
     autoloaderNamespaces.Model = "Model_"
     autoloaderNamespaces.Shared = "Shared_"
 
+    ;; local name of session
     resources.session.name = "panel2"
 
     ;; google analytics account
@@ -39,7 +40,7 @@
     resources.db.params.password = "hf8jPlmskjh8Pkfj"
 
     ; show errors to the web page, if they happen
-    resources.FaZend.errors.email = "manager@caybo.ru"
+    resources.FaZend.errors.email = "manager@tpc2.com"
 
 ; local installation and deployment platform installation
 [development : global]
