--- a/php/src/application/config/routes.ini
+++ b/php/src/application/config/routes.ini
@@ -37,6 +37,12 @@
     routes.tikz.defaults.action = "index"
     routes.tikz.map.1 = "tikz"
 
+    ; dynamic TIKZ image loader - CLEANER option
+    routes.tikzcleaner.type = "Zend_Controller_Router_Route_Static"
+    routes.tikzcleaner.route = "/-tikz/clean"
+    routes.tikzcleaner.defaults.controller = "tikz"
+    routes.tikzcleaner.defaults.action = "clean"
+
 [development : production]
 
 [testing : production]
