--- a/php/src/application/artifacts/ProjectRegistry/Project/Scope/WBS/packages/T/Defects/Requirements/Critical.ini
+++ b/php/src/application/artifacts/ProjectRegistry/Project/Scope/WBS/packages/T/Defects/Requirements/Critical.ini
@@ -1,7 +1,7 @@
 [wp]
-    cost = "10 * +{requirementsTotal} / 5"
-    SOW = "Find and document +{defectsCritical} critical defects 
+    cost = "10 * +{requirements/total} / 5"
+    sow = "Find and document +{defects/total} critical defects 
         in product functionality"
 
-    flow.iterate.base="+{defectsCritical}"
+    flow.iterate.base="+{defects/total}"
     flow.iterate.min=2
