--- a/php/src/application/artifacts/ProjectRegistry/Project/Scope/WBS/packages/T/Defects/Requirements/Grammar.ini
+++ b/php/src/application/artifacts/ProjectRegistry/Project/Scope/WBS/packages/T/Defects/Requirements/Grammar.ini
@@ -1,7 +1,7 @@
 [wp]
-    cost = "10 * +{defectsCritical} / 5"
-    SOW = "Find and document +{defectsCritical} critical defects 
+    cost = "10 * +{defects/total} / 5"
+    SOW = "Find and document +{defects/total} critical defects 
         in product functionality"
 
-    flow.iterate.base="+{defectsCritical}"
-    flow.iterate.min=2
+    split.iterate.base="+{defects/total}"
+    split.iterate.min=2
