--- a/php/src/application/artifacts/ProjectRegistry/Project/Scope/WBS/packages/T/Defects/Requirements/Critical.ini
+++ b/php/src/application/artifacts/ProjectRegistry/Project/Scope/WBS/packages/T/Defects/Requirements/Critical.ini
@@ -3,5 +3,5 @@
     sow = "Find and document +{defects/total} critical defects 
         in product functionality"
 
-    flow.iterate.base="+{defects/total}"
-    flow.iterate.min=2
+    split.iterate.base="+{defects/total}"
+    split.iterate.min=2
