--- a/php/src/application/artifacts/ProjectRegistry/Project/Scope/WBS/packages/T/Defects/Requirements/Grammar.ini
+++ b/php/src/application/artifacts/ProjectRegistry/Project/Scope/WBS/packages/T/Defects/Requirements/Grammar.ini
@@ -1,6 +1,6 @@
 [wp]
     cost = "10 * +{defects/total} / 5"
-    SOW = "Find and document +{defects/total} critical defects 
+    sow = "Find and document +{defects/total} critical defects 
         in product functionality"
 
     split.iterate.base="+{defects/total}"
