stakeholders improved, some changes in splitters

--- a/php/src/application/artifacts/ProjectRegistry/Project/Scope/WBS/packages/R/Requirements/Top.ini
+++ b/php/src/application/artifacts/ProjectRegistry/Project/Scope/WBS/packages/R/Requirements/Top.ini
@@ -1,7 +1,10 @@
 [wp]
-    cost = "10 * +{requirements/total} / 5"
-    sow = "Find and document +{defects/total} critical defects 
-        in product functionality"
+    ; 10 requirements = $60, about 2 hours of work for analyst
+    cost = "6 * +{requirements/functional/top/total}"
+    sow = "Solicit, analyze and document #{requirements/functional/top/total}
+        top level functional requirements"
+
+    split.assign.role = "SystemAnalyst"
 
     split.iterate.base="+{defects/total}"
     split.iterate.min=2
