search implemented by Lucene

--- a/php/src/application/config/routes.ini
+++ b/php/src/application/config/routes.ini
@@ -9,6 +9,14 @@
     routes.static.defaults.page = "about"
     routes.static.map.1 = "page"
 
+    ; PDF copy of any static page
+    routes.pdf.type = "Zend_Controller_Router_Route_Regex"
+    routes.pdf.route = "^pdf/(.*)"
+    routes.pdf.reverse = "pdf/%s"
+    routes.pdf.defaults.controller = "static"
+    routes.pdf.defaults.action = "pdf"
+    routes.pdf.map.1 = "page"
+
     ; home page
     routes.home.route = ""
     routes.home.defaults.controller = "static"
@@ -17,7 +25,7 @@
 
     ; panel front page
     routes.panel.type = "Zend_Controller_Router_Route_Regex"
-    routes.panel.route = "p(?:/(.*))"
+    routes.panel.route = "^p(?:/(.*))"
     routes.panel.defaults.controller = "panel"
     routes.panel.reverse = "p/%s"
     routes.panel.defaults.action = "index"
@@ -31,7 +39,7 @@
 
     ; dynamic TIKZ image loader
     routes.tikz.type = "Zend_Controller_Router_Route_Regex"
-    routes.tikz.route = ".*\-tikz/([\w\d]+)"
+    routes.tikz.route = "\-tikz/([\w\d]+)"
     routes.tikz.reverse = "-tikz/%s"
     routes.tikz.defaults.controller = "tikz"
     routes.tikz.defaults.action = "index"
@@ -39,7 +47,7 @@
 
     ; dynamic TIKZ image loader - CLEANER option
     routes.tikzcleaner.type = "Zend_Controller_Router_Route_Static"
-    routes.tikzcleaner.route = "/-tikz/clean"
+    routes.tikzcleaner.route = "^-tikz/clean"
     routes.tikzcleaner.defaults.controller = "tikz"
     routes.tikzcleaner.defaults.action = "clean"
 
