document sharing intro

--- a/php/src/application/config/routes.ini
+++ b/php/src/application/config/routes.ini
@@ -32,6 +32,14 @@
     routes.panel.defaults.doc = "root"
     routes.panel.map.1 = "doc"
 
+    ; panel front page
+    routes.shared.type = "Zend_Controller_Router_Route_Regex"
+    routes.shared.route = "^ps/(.*)"
+    routes.shared.reverse = "ps/%s"
+    routes.shared.defaults.controller = "panel"
+    routes.shared.defaults.action = "shared"
+    routes.shared.map.1 = "doc"
+
     ; panel specific functions
     routes.pf.type = "Zend_Controller_Router_Route"
     routes.pf.route = "pf/:action/*"
