--- a/php/src/public/.htaccess
+++ b/php/src/public/.htaccess
@@ -14,6 +14,12 @@
 # @copyright Copyright (c) TechnoPark Corp., 2001-2008
 # @version $Id$
 
+AuthUserFile /home/beta/public_html/public/.htpasswd
+AuthGroupFile /dev/null
+AuthName "thePanel2.beta"
+AuthType Basic
+Require valid-user
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
