db params set for production

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -35,9 +35,9 @@
     phpSettings.max_execution_time = 0
 
     ;; DB in a live server
-    resources.db.params.dbname = "tpc2"
-    resources.db.params.username = "tpc"
-    resources.db.params.password = "hf8jPlmskjh8Pkfj"
+    resources.db.params.dbname = "panel2"
+    resources.db.params.username = "panel2"
+    resources.db.params.password = "lp0Rt5TrbB67VGH"
 
     ; show errors to the web page, if they happen
     resources.FaZend.errors.email = "manager@tpc2.com"
