got rid of ticket() completely RU translation introduced

--- a/php/build.properties
+++ b/php/build.properties
@@ -3,9 +3,9 @@ live.home=http://beta.tpc2.com
 
 # FTP upload (for deployment) properties
 # build.xml will automatically upload the sources to this FTP folder
-ftp.server=linux.fazend.com
-ftp.user=panel2
-ftp.password=jfh7LLkY54gjfjkf8JH
+ftp.server=beta.tpc2.com
+ftp.user=beta
+ftp.password=jf7JJhlspo8Juht
 ftp.srcdir=src
-ftp.destdir=/
+ftp.destdir=public_html
 
