manager's email configured to egor@tpc2.com

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -21,9 +21,9 @@
 
     ; actual email config
     resources.Email.send = true
-    resources.Email.manager.email = "cso@technoparkcorp.com"
+    resources.Email.manager.email = "egor@tpc2.com"
     resources.Email.manager.name = "CSO"
-    resources.Email.notifier.email = "panel@technoparkcorp.com"
+    resources.Email.notifier.email = "panel@tpc2.com"
     resources.Email.notifier.name = "thePanel Notifier"
 
 [production : global]
@@ -40,7 +40,7 @@
     resources.db.params.password = "lp0Rt5TrbB67VGH"
 
     ; show errors to the web page, if they happen
-    resources.FaZend.errors.email = "manager@tpc2.com"
+    resources.FaZend.errors.email = "egor@tpc2.com"
 
 ; local installation and deployment platform installation
 [development : global]
