staff requests fixed for production

--- a/php/src/application/artifacts/ProjectRegistry/wanted.ini
+++ b/php/src/application/artifacts/ProjectRegistry/wanted.ini
@@ -1,6 +1,6 @@
 ;; temp file
 ;; delete it when projects work properly
-[wanted]
+[testing]
 
     p1.project = "test"
     p1.role = "Programmer"
@@ -26,3 +26,13 @@
     t1.project = "test"
     t1.role = "Tester"
     t1.skills.PHP = "25"
+
+[development : testing]
+
+[production]
+
+    p1.project = "york"
+    p1.role = "Programmer"
+    p1.skills.ZendFramework = "75"
+    p1.skills.PHP = "50"
+    p1.skills.jQuery = "25"
