more changes to make it working with POS

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -26,6 +26,13 @@
     resources.Email.notifier.email = "panel@tpc2.com"
     resources.Email.notifier.name = "thePanel Notifier"
 
+    ;; this line enables SQL tables for FaZend_Pos
+    resources.Deployer.folders.Pos = FAZEND_PATH "/Pos/database"
+
+    ;; this is important, since some methods may go deeper than 100 (default in xdebug)
+    ;; @see http://xdebug.org/docs/basic
+    ;; phpSettings.xdebug.max_nesting_level = 200
+
 [production : global]
 
     ;; php.ini settings
@@ -57,7 +64,6 @@
 
     ;; don't send emails from development platform
     resources.Email.send = false
-
 
 ; testing environmet
 [testing : global]
