renamed notifier to beta

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -24,7 +24,7 @@
     resources.Email.manager.email = "egor@tpc2.com"
     resources.Email.manager.name = "CSO"
     resources.Email.notifier.email = "panel@tpc2.com"
-    resources.Email.notifier.name = "thePanel Notifier"
+    resources.Email.notifier.name = "beta"
 
     ;; this line enables SQL tables for FaZend_Pos
     resources.Deployer.folders.Pos = FAZEND_PATH "/Pos/database"
