more staff requests added to wanted.ini

--- a/php/src/application/artifacts/ProjectRegistry/wanted.ini
+++ b/php/src/application/artifacts/ProjectRegistry/wanted.ini
@@ -36,3 +36,16 @@
     p1.skills.ZendFramework = "75"
     p1.skills.PHP = "50"
     p1.skills.jQuery = "25"
+
+    p2.project = "voip"
+    p2.role = "Programmer"
+    p2.skills.ZendFramework = "75"
+    p2.skills.PHP = "50"
+
+    sa1.project = "york"
+    sa1.role = "SystemAnalyst"
+    sa1.skills.UML = "50"
+
+    sa2.project = "voip"
+    sa2.role = "SystemAnalyst"
+    sa2.skills.UML = "50"
