supplier registry fixed, now it works

--- a/php/src/application/artifacts/ProjectRegistry/wanted.ini
+++ b/php/src/application/artifacts/ProjectRegistry/wanted.ini
@@ -49,3 +49,8 @@
     sa2.project = "voip"
     sa2.role = "SystemAnalyst"
     sa2.skills.UML = "50"
+
+    a1.project = "york"
+    a1.role = "Architect"
+    a1.skills.UML = "50"
+
