db connection is persistent now

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -17,6 +17,7 @@
     ;; mysql connection
     resources.db.adapter = "Mysqli"
     resources.db.params.host = "localhost"
+    resources.db.params.persistent = "true"
     resources.db.isDefaultTableAdapter = true
 
     ; actual email config
