disable phpdoc and sniffer

--- a/php/build.properties
+++ b/php/build.properties
@@ -11,3 +11,9 @@ ftp.destdir=public_html
 
 # validate code for PHPCS compliance
 to.phpcs=true
+
+# don't deploy phpDoc
+to.phpdoc=false
+
+# don't deploy PHPCS report
+to.sniffer=false
