MYSQLI_OPT_CONNECT_TIMEOUT set to 360

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -18,6 +18,7 @@
     resources.db.adapter = "Mysqli"
     resources.db.params.host = "localhost"
     resources.db.params.persistent = true
+    resources.db.params.driver_options.0 = 360 ;; MYSQLI_OPT_CONNECT_TIMEOUT
     resources.db.isDefaultTableAdapter = true
 
     ; actual email config
