PMO performance reports introduced

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -15,7 +15,7 @@
     resources.FaZend.GoogleAnalytics = "UA-1963507-3"
 
     ;; mysql connection
-    resources.db.adapter = "Mysqli"
+    resources.db.adapter = "Pdo_Mysql"
     resources.db.params.host = "localhost"
     resources.db.params.persistent = true
     resources.db.params.driver_options.0 = 360 ;; MYSQLI_OPT_CONNECT_TIMEOUT
