phpmd injected into build.xml

--- a/php/build.properties
+++ b/php/build.properties
@@ -17,6 +17,9 @@ ftp.destdir=public_html
 # validate code for PHPCS compliance
 to.phpcs=true
 
+# validate PHP mess detection
+to.phpmd=true
+
 # don't deploy phpDoc
 to.phpdoc=false
 
