session params added to app.ini

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -10,6 +10,9 @@
 
     ;; local name of session
     resources.session.name = "panel2"
+    resources.session.remember_me_seconds = 864000
+    resources.session.cookie_lifetime = 864000
+    resources.session.use_only_cookies = true
 
     ;; google analytics account
     resources.FaZend.GoogleAnalytics = "UA-1963507-3"
