session lifetime set to false

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -10,8 +10,8 @@
 
     ;; local name of session
     resources.session.name = "panel2"
-    resources.session.remember_me_seconds = 864000
-    resources.session.cookie_lifetime = 864000
+    resources.session.remember_me_seconds = false
+    resources.session.cookie_lifetime = false
     resources.session.use_only_cookies = true
 
     ;; google analytics account
