refs #16 - preliminary commit

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -2,7 +2,7 @@
 [global]
 
     ;; load FaZend library
-    resources.FaZend.name = "panel2"
+    resources.fazend.name = "panel2"
 
     ;; load project classes
     autoloaderNamespaces.Model = "Model_"
@@ -15,7 +15,7 @@
     resources.session.use_only_cookies = true
 
     ;; google analytics account
-    resources.FaZend.GoogleAnalytics = "UA-1963507-3"
+    resources.fazend.GoogleAnalytics = "UA-1963507-3"
 
     ;; mysql connection
     resources.db.adapter = "Pdo_Mysql"
@@ -25,14 +25,15 @@
     resources.db.isDefaultTableAdapter = true
 
     ; actual email config
-    resources.Email.send = true
-    resources.Email.manager.email = "egor@tpc2.com"
-    resources.Email.manager.name = "CSO"
-    resources.Email.notifier.email = "panel@tpc2.com"
-    resources.Email.notifier.name = "beta"
+    resources.fz_email.send = true
+    resources.fz_email.manager.email = "egor@tpc2.com"
+    resources.fz_email.manager.name = "CSO"
+    resources.fz_email.notifier.email = "panel@tpc2.com"
+    resources.fz_email.notifier.name = "beta"
 
     ;; this line enables SQL tables for FaZend_Pos
-    resources.Deployer.folders.Pos = FAZEND_PATH "/Pos/database"
+    resources.fz_deployer.deploy = true
+    resources.fz_deployer.folders.Pos = FAZEND_PATH "/Pos/database"
 
     ;; this is important, since some methods may go deeper than 100 (default in xdebug)
     ;; @see http://xdebug.org/docs/basic
@@ -52,12 +53,12 @@
     resources.db.params.password = "lp0Rt5TrbB67VGH"
 
     ; show errors to the web page, if they happen
-    resources.FaZend.errors.email = "egor@tpc2.com"
+    resources.fz_errors.email = "egor@tpc2.com"
 
 ; local installation and deployment platform installation
 [development : global]
 
-    resources.FaZend.htmlCompression = false
+    resources.fz_view.htmlCompression = false
 
     ;; DB in a development server
     resources.db.params.dbname = "panel2"
@@ -65,16 +66,16 @@
     resources.db.params.password = "p0OmlQ210Lmabt6gfh"
 
     ; show errors to the web page, if they happen
-    resources.FaZend.errors.display = true
+    resources.fz_errors.display = true
 
     ;; don't send emails from development platform
-    resources.Email.send = false
+    resources.fz_email.send = false
 
 ; testing environmet
 [testing : global]
 
     ;; don't send emails from development platform
-    resources.Email.send = false
+    resources.fz_email.send = false
 
     ;; DB in a live server
     resources.db.params.dbname = "panel2_test"
