--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -33,6 +33,7 @@
 
     ;; this line enables SQL tables for FaZend_Pos
     resources.fz_deployer.deploy = true
+    resources.fz_deployer.verbose = true
     resources.fz_deployer.folders.Pos = FAZEND_PATH "/Pos/database"
 
     ;; this is important, since some methods may go deeper than 100 (default in xdebug)
