--- a/php/build.properties
+++ b/php/build.properties
@@ -4,15 +4,15 @@
 #
 
 # Live production server details
-live.home=http://beta.tpc2.com
+live.home=http://tpc2.com
 
 # FTP upload (for deployment) properties
 # build.xml will automatically upload the sources to this FTP folder
-ftp.server=beta.tpc2.com
-ftp.user=beta
+ftp.server=tpc2.com
+ftp.user=tpc2@caybo.ru
 ftp.password=jf7JJhlspo8Juht
 ftp.srcdir=src
-ftp.destdir=public_html
+ftp.destdir=.
 
 # validate code for PHPCS compliance
 to.phpcs=true
