hosting on hostgator

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -45,12 +45,12 @@
     ;; php.ini settings
     phpSettings.display_startup_errors = 0
     phpSettings.display_errors = 0
-    phpSettings.error_log = APPLICATION_PATH "/../../log/php_errors.log"
+    phpSettings.error_log = APPLICATION_PATH "/../../tpc2.log"
     phpSettings.max_execution_time = 0
 
     ;; DB in a live server
-    resources.db.params.dbname = "panel2"
-    resources.db.params.username = "panel2"
+    resources.db.params.dbname = "caybo_tpc2"
+    resources.db.params.username = "caybo_tpc2"
     resources.db.params.password = "lp0Rt5TrbB67VGH"
 
     ; show errors to the web page, if they happen
