phprack notifier injected

--- a/php/build.properties
+++ b/php/build.properties
@@ -6,6 +6,10 @@
 # Live production server details
 live.home=http://tpc2.com
 
+# Ping phpRack in order to validate installation (integration testing)
+# If the url returns error, the build will be failed
+phprack.url=http://tpc2.com/phprack.php?suite&login=egor&password=tpc2
+
 # FTP upload (for deployment) properties
 # build.xml will automatically upload the sources to this FTP folder
 ftp.server=tpc2.com
