--- a/php/build.properties
+++ b/php/build.properties
@@ -19,7 +19,7 @@ ftp.destdir=.
 to.phpcs=true
 
 # validate PHP mess detection
-to.phpmd=true
+to.phpmd=false
 
 # don't deploy phpDoc
 to.phpdoc=false
