--- a/php/src/application/config/routes.ini
+++ b/php/src/application/config/routes.ini
@@ -15,6 +15,13 @@
     routes.home.defaults.action = "index"
     routes.home.defaults.page = "home"
 
+    routes.tikz.type = "Zend_Controller_Router_Route_Regex"
+    routes.tikz.route = "\-tikz/([\w\d]+)"
+    routes.tikz.reverse = "-tikz/%s"
+    routes.tikz.defaults.controller = "tikz"
+    routes.tikz.defaults.action = "index"
+    routes.tikz.map.1 = "tikz"
+
 [development : production]
 
 [testing : production]
