--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -14,7 +14,7 @@
     resources.session.use_only_cookies = true
 
     ;; google analytics account
-    resources.fazend.GoogleAnalytics = "UA-1963507-3"
+    resources.fz_view.GoogleAnalytics = "UA-1963507-3"
 
     ;; mysql connection
     resources.db.adapter = "Pdo_Mysql"
