corrections in formatting

--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -15,7 +15,7 @@
     resources.session.use_only_cookies = true
 
     ;; google analytics account
-    resources.fazend.GoogleAnalytics = "UA-1963507-3"
+    resources.fz_view.GoogleAnalytics = "UA-1963507-3"
 
     ;; mysql connection
     resources.db.adapter = "Pdo_Mysql"
@@ -62,15 +62,13 @@
 ; local installation and deployment platform installation
 [development : global]
 
+    phpSettings.display_errors = 1
     resources.fz_view.htmlCompression = false
 
     ;; DB in a development server
     resources.db.params.dbname = "panel2"
     resources.db.params.username = "panel2"
     resources.db.params.password = "p0OmlQ210Lmabt6gfh"
-
-    ; show errors to the web page, if they happen
-    resources.fz_errors.display = true
 
     ;; don't send emails from development platform
     resources.fz_email.send = false
