fix in phprack url

--- a/php/build.properties
+++ b/php/build.properties
@@ -5,11 +5,11 @@
 
 # Ping phpRack in order to validate installation (integration testing)
 # If the url returns error, the build will be failed
-phprack.url=http://tpc2.com/phprack.php?suite&login=egor&password=tpc2
+phprack.url=http://www.technoparkcorp.com/phprack.php?suite&login=egor&password=tpc2
 
 # FTP upload (for deployment) properties
 # build.xml will automatically upload the sources to this FTP folder
-ftp.server=tpc2.com
+ftp.server=technoparkcorp.com
 ftp.user=tpc2@caybo.ru
 ftp.password=jf7JJhlspo8Juht
 ftp.srcdir=src
