--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -33,11 +33,14 @@
     ;; this is important, since some methods may go deeper than 100 (default in xdebug)
     ;; @see http://xdebug.org/docs/basic
     ;; phpSettings.xdebug.max_nesting_level = 200
-    
+
     ;; log by default to output
     phpSettings.error_log = "php://stdout"
 
 [production : global]
+
+    ;; disable caches since they don't work as they should
+    resources.fz_caches.load = false
 
     ;; php.ini settings
     phpSettings.display_startup_errors = 0
