external properties introduced

--- a/php/build.properties
+++ b/php/build.properties
@@ -9,11 +9,11 @@ phprack.url=http://www.technoparkcorp.com/phprack.php?suite&login=egor&password=
 
 # FTP upload (for deployment) properties
 # build.xml will automatically upload the sources to this FTP folder
-ftp.server=technoparkcorp.com
-ftp.user=tpc2@caybo.ru
-ftp.password=jf7JJhlspo8Juht
+#ftp.server=..
+#ftp.user=..
+#ftp.password=..
+#ftp.destdir=.
 ftp.srcdir=src
-ftp.destdir=.
 
 # validate code for PHPCS compliance
 to.phpcs=true
