--- a/php/src/application/config/app.ini
+++ b/php/src/application/config/app.ini
@@ -30,6 +30,9 @@
     resources.fz_email.notifier.email = "panel@tpc2.com"
     resources.fz_email.notifier.name = "beta"
 
+    ;; disable cache
+    resources.fz_caches.includes = false
+
     ;; this is important, since some methods may go deeper than 100 (default in xdebug)
     ;; @see http://xdebug.org/docs/basic
     ;; phpSettings.xdebug.max_nesting_level = 200
