removed redundant files

--- a/src/application/config/app.ini
+++ b/src/application/config/app.ini
@@ -7,38 +7,11 @@
     ;; load project classes
     autoloaderNamespaces.Model = "Model_"
 
-    ;; local name of session
-    resources.session.name = "panel2"
-    resources.session.remember_me_seconds = false
-    resources.session.cookie_lifetime = false
-    resources.session.use_only_cookies = true
-
     ;; google analytics account
     resources.fz_view.GoogleAnalytics = "UA-1963507-3"
 
-    ;; mysql connection
-    resources.db.adapter = "Pdo_Mysql"
-    resources.db.params.host = "localhost"
-    resources.db.params.persistent = true
-    resources.db.params.driver_options.0 = 360 ;; MYSQLI_OPT_CONNECT_TIMEOUT
-    resources.db.isDefaultTableAdapter = true
-
-    ; actual email config
-    resources.fz_email.send = true
-    resources.fz_email.manager.email = "egor@tpc2.com"
-    resources.fz_email.manager.name = "CSO"
-    resources.fz_email.notifier.email = "panel@tpc2.com"
-    resources.fz_email.notifier.name = "beta"
-
     ;; disable cache
     resources.fz_caches.includes = false
-
-    ;; this is important, since some methods may go deeper than 100 (default in xdebug)
-    ;; @see http://xdebug.org/docs/basic
-    ;; phpSettings.xdebug.max_nesting_level = 200
-
-    ;; log by default to output
-    phpSettings.error_log = "php://stdout"
 
 [production : global]
 
@@ -48,26 +21,15 @@
     ;; php.ini settings
     phpSettings.display_startup_errors = 0
     phpSettings.display_errors = 0
-    phpSettings.error_log = APPLICATION_PATH "/../../tpc2.log"
     phpSettings.max_execution_time = 0
 
-    ;; DB in a live server
-    resources.db.params.dbname = "caybo_tpc2"
-    resources.db.params.username = "caybo_tpc2"
-    resources.db.params.password = "lp0Rt5TrbB67VGH"
-
     ; show errors to the web page, if they happen
-    resources.fz_errors.email = "egor@tpc2.com"
+    resources.fz_errors.email = "yegor@tpc2.com"
 
 ; local installation and deployment platform installation
 [development : global]
 
     resources.fz_view.htmlCompression = false
-
-    ;; DB in a development server
-    resources.db.params.dbname = "panel2"
-    resources.db.params.username = "panel2"
-    resources.db.params.password = "p0OmlQ210Lmabt6gfh"
 
     ;; don't send emails from development platform
     resources.fz_email.send = false
@@ -77,9 +39,3 @@
 
     ;; don't send emails from development platform
     resources.fz_email.send = false
-
-    ;; DB in a live server
-    resources.db.params.dbname = "panel2_test"
-    resources.db.params.username = "panel2_test"
-    resources.db.params.password = "p0OmlQ210Lmabt6gfh"
-
