--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ env:
     - secure: "NLQUlj0EpI3U1zYEfMY9oUMAqSSqLmd5POsShxd/7wN8ifC/0B7+qo0nJ40fYM9y/qB/NWJnsPrcDY9s1bRye1dxsvjwqmwx4sV78Hry5b7Ii+lx6rH2FYqOC8x7iAOsoV2eBWBBJFa6jt2QVOzOAB13FY5tPLx/m6cP/HdmvhQ="
 install:
   - sudo add-apt-repository -y ppa:resmo/git-ftp
-  - sudo aptitude -y update
-  - sudo aptitude -y install git-ftp
+  - sudo apt-get -y update
+  - sudo apt-get -y install git-ftp
 script: git ftp push www.technoparkcorp.com --user "${LOGIN}" --passwd "${PASSWORD}" --syncroot src --active
