--- a/httpd.conf
+++ b/httpd.conf
@@ -1,4 +1,4 @@
-<Directory /code/technoparkcorp/src/public>
+<Directory /code/technoparkcorp.com/src/public>
     Options Indexes FollowSymLinks Includes
     Allow from all
     AllowOverride None
@@ -8,5 +8,5 @@
 </Directory>
 <VirtualHost *:80>
     ServerName technoparkcorp.be
-    DocumentRoot /code/technoparkcorp/src/public
+    DocumentRoot /code/technoparkcorp.com/src/public
 </VirtualHost>
