--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ install:
   - sudo add-apt-repository -y ppa:resmo/git-ftp
   - sudo apt-get -y update
   - sudo apt-get -y install git-ftp
-script: ./deploy.sh
+script: 
+  - git ftp push --user "${LOGIN}" --passwd "${PASSWORD}" --syncroot src www.technoparkcorp.com
