--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: http://www.technoparkcorp.com
 rss_name: rss.xml
 
 # see https://github.com/noct/jekyll-sass
-gems: ['jekyll-sass', 'jekyll-plantuml']
+gems: ['jekyll-sass']
 sass:
   style: compressed
   deploy_style: compressed
