--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
+language: ruby
+branches:
+  only:
+    - master
+install:
+  - bundle install
+  - npm install phantomjs -g
+  - npm install casperjs -g
 env:
   global:
-    - secure: "PRf7ysUT1BkwH7eAVJdqfksbAiE5/e1PXJuTF6SV2PQZCIyJsbGCnqT9xemm87j2OIVD5NDyKIUAgiZo/JVxGekop9RYuuIffj/9MMfngO1ewJbYSOCTJDPT7wUMmiEPBcZ2LAP2U7geKzABKzeuurSm8B5W3l1b7Mg93E+e+Qo="
-    - secure: "NLQUlj0EpI3U1zYEfMY9oUMAqSSqLmd5POsShxd/7wN8ifC/0B7+qo0nJ40fYM9y/qB/NWJnsPrcDY9s1bRye1dxsvjwqmwx4sV78Hry5b7Ii+lx6rH2FYqOC8x7iAOsoV2eBWBBJFa6jt2QVOzOAB13FY5tPLx/m6cP/HdmvhQ="
-install:
-  - sudo add-apt-repository -y ppa:resmo/git-ftp
-  - sudo apt-get -y update
-  - sudo apt-get -y install git-ftp
-script: 
-  - git ftp push --user "${LOGIN}" --passwd "${PASSWORD}" --syncroot src www.technoparkcorp.com
+    - secure: "YRF2hq6GI07WDf8uzPgRZ72MF0/m+KRLXOvLFApzliPGav86wMdMBnUlb2TnbneOIjnZsFnivVTi0nOmhBJu/tOTnLdXUn96smKg60hHuQOqZYohv0Kbzl5SU0uDfN50q2inXxgd7xSH3D0zCMge8TacWzrp233NcjncArsYyoU="
+script:
+  - _test/run.sh
+  - jgd -u https://yegor256:$PASSWORD@github.com/teamed/technoparkcorp.git
+
