--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ branches:
   only:
     - master
 install:
+  - sudo apt-get install -y netpbm texlive texlive-latex-extra
   - bundle install
   - npm install phantomjs -g
   - npm install casperjs -g
