--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ env:
     - secure: "Dt3EYJ78c5ku9mnCwhqja6LF0ShZm51YYivOLXrVv6IlLjkt3iyTPyWI9IP50LqFq0ckEOPHRPU513QZUAZdU1idGJYPQGFdXr/6TgzN8Tfp2R+OEi9FxtvkIxAJjWHN4TqdMjgwTfY75BKmuCgZBZu1Yt4trX1EGY1Dn6vCpVo="
 script:
   - _test/run.sh
-  - jgd -u https://yegor256:$PASSWORD@github.com/teamed/technoparkcorp.git
+  - jgd -u https://yegor256:$PASSWORD@github.com/teamed/technoparkcorp.com.git
 
