--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,24 @@
 language: ruby
 branches:
   only:
-    - master
+  - master
 install:
-  - sudo apt-get install -y netpbm texlive texlive-latex-extra
-  - bundle install
-  - npm install phantomjs -g
-  - npm install casperjs -g
+- sudo apt-get install -y netpbm texlive texlive-latex-extra
+- bundle install
+- npm install phantomjs -g
+- npm install casperjs -g
 env:
   global:
-    - secure: "d3OvGe1OUFcfcBVQq7uEUMAhTQQN2/e5Ex27hS631kSXJ/nR5+Vo1Ub+PctEgmJ7FC1kksDTYcNZLTaunNKCPc3iqVvuFPF2KXBoFESswb7WnrIdSyL+fpgsdcetMEgbzHo97l8JV65k02GDtXd5mZ3m/WoE2KZl8RwNGJxwvXY="
+  - secure: d3OvGe1OUFcfcBVQq7uEUMAhTQQN2/e5Ex27hS631kSXJ/nR5+Vo1Ub+PctEgmJ7FC1kksDTYcNZLTaunNKCPc3iqVvuFPF2KXBoFESswb7WnrIdSyL+fpgsdcetMEgbzHo97l8JV65k02GDtXd5mZ3m/WoE2KZl8RwNGJxwvXY=
+before_install:
+- set -e
+- openssl aes-256-cbc -K $encrypted_b5b51a553100_key -iv $encrypted_b5b51a553100_iv
+  -in id_rsa.enc -out /code/teamed.io/id_rsa -d
+- mv id_rsa ~/.ssh
+- chmod 600 ~/.ssh/id_rsa
 script:
-  - set -x
-  - set -e
-  - _test/run.sh
-  - git config --global user.email "travis@teamed.io"
-  - git config --global user.name "travis"
-  - jgd -u https://yegor256:$PASSWORD@github.com/teamed/technoparkcorp.com.git
-
+- set -e
+- _test/run.sh
+- git config --global user.email "travis@teamed.io"
+- git config --global user.name "travis"
+- jgd -u git@github.com:teamed/technoparkcorp.com.git
