--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 before_install:
 - set -e
 - openssl aes-256-cbc -K $encrypted_b5b51a553100_key -iv $encrypted_b5b51a553100_iv
-  -in id_rsa.enc -out /code/teamed.io/id_rsa -d
+  -in id_rsa.enc -out id_rsa -d
 - mv id_rsa ~/.ssh
 - chmod 600 ~/.ssh/id_rsa
 script:
