--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ addons:
     - netpbm
     - texlive
     - texlive-latex-extra
-    - xzdec
 install:
+- travis_retry sudo apt-get install -y xzdec
 - travis_retry bundle install
 - travis_retry npm install phantomjs -g
 - travis_retry npm install casperjs -g
